# llmtime

./: .gitignore  README.md  demo.ipynb  demo.py  install.sh  pyproject.toml
apptainer/: gpu.def  launch-container.sh
ctf/: forecast.ipynb  forecast.py  generate_bash.py  generate_configs.py  generate_slurms.py  hf_token  run.py
